--- a/client/src/index.css
+++ b/client/src/index.css
@@ -18,4 +18,59 @@ body.chakra-ui-dark .navlink.active{
 }
 .modalform{
     width: 100%;
+    
+}
+
+/* ============================ auth__section ====================== */
+.auth__section{
+    padding: 2rem ;
+}
+.auth__container{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1rem;
+    place-items: center;    
+}
+.auth__left{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    width: 100%;
+    height: 100%;
+    border-radius: 40px;
+}
+.form__container{
+margin:  auto;
+padding: 1rem;
+}
+.form{
+    padding: 1rem 0;
+}
+.auth__right img{
+    width: 100%;
+}
+
+/* =============================== media 768 ================== */
+@media (max-width:768px) {
+/* ============================ auth__section ====================== */
+.auth__section{
+    padding: 1rem ;
+}
+.auth__left{
+    padding: 0 0 4rem 0;
+
+}
+.auth__container{
+    grid-template-columns: 1fr ;
+    place-items: center;    
+    width: 100%;
+}
+.form__container{
+    padding: 2rem 0 0 0 ;
+
+}
+.auth__right{
+    display: none;
+}
+
 }
